--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "ext-pdo": "*",
     "cakephp/database": "^4",
     "selective/array-reader": "^1.1",
-    "apollo29/csvdb": "^0.0.12"
+    "apollo29/csvdb": "^0.0.13",
+    "ext-zip": "*"
   },
   "license": "MIT",
   "authors": [
